--- a/mondai1-7.css
+++ b/mondai1-7.css
@@ -25,22 +25,22 @@ main {
 .service1 {
   margin-bottom: 50px;
   padding-bottom: 30px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #d1d1d1;
 }
 
 .service2 {
   margin-bottom: 30px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
 
 .service3 {
   margin-bottom: 30px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
 
 .service4 {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
